# cpputils

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cpputils.pro  dependencies.pri
.github/workflows/: CI.yml
assert/: advanced_assert.cpp  advanced_assert.h  assert.pri
compiler/: compiler_warnings_control.h
debugger/: debugger.pri  debugger_is_attached.cpp  debugger_is_attached.h
hash/: fasthash.c  fnv_1a.h  hash.pri  hash_consteval.hpp  jenkins_hash.hpp  murmurhash3.cpp  murmurhash3.h  sha3.c  sha3.h  sha3_hasher.hpp
lang/: enum.h  lang.pri  type_traits_fast.hpp
math/: cmeancounter.h  math.pri
regex/: regex.pri  regex_helpers.hpp
system/: consoleapplicationexithandler.cpp  consoleapplicationexithandler.h  ctimeelapsed.cpp  ctimeelapsed.h  processfilepath.cpp  processfilepath.hpp  rdtsc.h  storagespeed.cpp  storagespeed.hpp  system.pri  timing.cpp  timing.h  win_utils.cpp  win_utils.hpp
tests/: cpputils-tests.pro
tests/test-app/: cinterruptablethread_tests.cpp  execution_queue_tests.cpp  main.cpp  test-app.pro  thread_pool_tests.cpp
threading/: cconsumerblockingqueue.h  cexecutionqueue.h  cinterruptablethread.cpp  cinterruptablethread.h  cperiodicexecutionthread.cpp  cperiodicexecutionthread.h  cworkerthread.cpp  cworkerthread.h  simplethread.h  thread_helpers.cpp  thread_helpers.h  threading.pri
utility_functions/: memory_functions.cpp  memory_functions.h  utility_functions.pri
